tests/passes/well-formed/ref-type-mismatch.expect
---CODE---
1
---STDERR---
Error: tests/passes/well-formed/ref-type-mismatch.futil
32 |      invoke f[m = k1]()();
   |      ^^^^^^^^^^^^^^^^^^^^^ Malformed Control: unmatching binding values for std_reg, expected WIDTH to be 32, instead got 16
